Added bibtex entry.

--- a/doc/packageVignette/UBL.bib
+++ b/doc/packageVignette/UBL.bib
@@ -11,6 +11,20 @@
   Url                      = {http://CRAN.R-project.org/package=adabag}
 }
 
+@Article{batista2004study,
+  Title                    = {A study of the behavior of several methods for balancing machine learning training data},
+  Author                   = {Batista, Gustavo EAPA and Prati, Ronaldo C and Monard, Maria Carolina},
+  Journal                  = {ACM SIGKDD Explorations Newsletter},
+  Year                     = {2004},
+  Number                   = {1},
+  Pages                    = {20--29},
+  Volume                   = {6},
+
+  Owner                    = {pbranco},
+  Publisher                = {ACM},
+  Timestamp                = {2015.04.10}
+}
+
 @Book{BFOS84,
   Title                    = {Classification and Regression Trees},
   Author                   = {L. Breiman and J. Friedman and R. Olshen and C. Stone},
