--- a/doc/packageVignette/UBL.bib
+++ b/doc/packageVignette/UBL.bib
@@ -195,6 +195,18 @@
   Year                     = {2010}
 }
 
+@InCollection{torgo2013smote,
+  Title                    = {SMOTE for Regression},
+  Author                   = {Torgo, Lu{\'\i}s and Ribeiro, Rita P and Pfahringer, Bernhard and Branco, Paula},
+  Booktitle                = {Progress in Artificial Intelligence},
+  Publisher                = {Springer},
+  Year                     = {2013},
+  Pages                    = {378--389},
+
+  Owner                    = {pbranco},
+  Timestamp                = {2015.05.04}
+}
+
 @Manual{earth,
   Title                    = {earth: Multivariate Adaptive Regression Spline Models},
   Author                   = {Stephen Milborrow. Derived from mda:mars by Trevor Hastie and Rob Tibshirani.},
