adding references regarding gaussian noise

--- a/doc/packageVignette/UBL.bib
+++ b/doc/packageVignette/UBL.bib
@@ -116,6 +116,34 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{lee2000noisy,
+  Title                    = {Noisy replication in skewed binary classification},
+  Author                   = {Lee, Sauchi Stephen},
+  Journal                  = {Computational statistics \& data analysis},
+  Year                     = {2000},
+  Number                   = {2},
+  Pages                    = {165--191},
+  Volume                   = {34},
+
+  Owner                    = {pbranco},
+  Publisher                = {Elsevier},
+  Timestamp                = {2015.05.07}
+}
+
+@Article{lee1999regularization,
+  Title                    = {Regularization in skewed binary classification},
+  Author                   = {Lee, Sauchi Stephen},
+  Journal                  = {Computational Statistics},
+  Year                     = {1999},
+  Number                   = {2},
+  Pages                    = {277},
+  Volume                   = {14},
+
+  Owner                    = {pbranco},
+  Publisher                = {Heidelberg: Physica-Verlag,[1992-},
+  Timestamp                = {2015.05.07}
+}
+
 @Article{randomForest,
   Title                    = {Classification and Regression by randomForest},
   Author                   = {Andy Liaw and Matthew Wiener},
