update package vignette

--- a/doc/packageVignette/UBL.bib
+++ b/doc/packageVignette/UBL.bib
@@ -195,6 +195,20 @@
   Url                      = {http://CRAN.R-project.org/package=gbm}
 }
 
+@Article{stanfill1986toward,
+  Title                    = {Toward memory-based reasoning},
+  Author                   = {Stanfill, Craig and Waltz, David},
+  Journal                  = {Communications of the ACM},
+  Year                     = {1986},
+  Number                   = {12},
+  Pages                    = {1213--1228},
+  Volume                   = {29},
+
+  Owner                    = {pbranco},
+  Publisher                = {ACM},
+  Timestamp                = {2015.06.02}
+}
+
 @Manual{rpart,
   Title                    = {rpart: Recursive Partitioning},
   Author                   = {Terry Therneau and Beth Atkinson and Brian Ripley},
@@ -270,3 +284,25 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{wilson1997improved,
+  Title                    = {Improved heterogeneous distance functions},
+  Author                   = {Wilson, D. Randall and Martinez, Tony R.},
+  Journal                  = {JAIR},
+  Year                     = {1997},
+  Pages                    = {1--34},
+  Volume                   = {6},
+
+  Owner                    = {pbranco},
+  Timestamp                = {2015.06.02}
+}
+
+
+  @Article{rf,
+    title = {Classification and Regression by randomForest},
+    author = {A. Liaw and M. Wiener},
+    journal = {R News},
+    year = {2002},
+    volume = {2},
+    number = {3},
+    pages = {18-22}
+  }
